--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://LysovEugene.github.io/test1",
+  "homepage": "https://LysovEugene.github.io/goit-react-hw-01-components",
   "eslintConfig": {
     "extends": "react-app"
   },
